src/objects/Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Due_Date__c</fullName>
        <formula>Milestone__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Due__c</fullName>
        <formula>Milestone__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Appirio_PSAe__Proj__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Task</label>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>